Addressed Display Resolutions and Re-Deal

--- a/client/index.html
+++ b/client/index.html
@@ -14,30 +14,30 @@
     
     <!-- Room Title-->
     <div class="row">
-      <div class="col-xl-12"><h3 id="roomTitle">Online Poker</h3></div>
+      <div class="col-lg-12"><h3 id="roomTitle">Online Poker</h3></div>
     </div>
 
     <!-- Play Surface -->
     <div class="row padding-l padding-r">
 
       <!-- Players Hands Area -->
-      <div class="col-xl-9 section-container border-t border-b border-l"> <!-- Left Area Div -->
+      <div class="col-lg-9 section-container border-t border-b border-l"> <!-- Left Area Div -->
 
         <!-- Opponents 3 & 4 -->
         <div class="row border-b">
-          <div class="col-xl-6 opponent-container">
+          <div class="col-lg-6 opponent-container">
               <div class="row">
-                <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-3></h5></div>
-                <div class="col-xl-9 no-padding-lr align-right">
+                <div class="col-lg-3 no-padding-lr"><h5 id=opponentName-3></h5></div>
+                <div class="col-lg-9 no-padding-lr align-right">
                   <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-3">Select</button>  
                 </div>
               </div>
               <div class="card-container" id="opponentCards-3"></div>
           </div>      
-          <div class="col-xl-6 opponent-container border-l">
+          <div class="col-lg-6 opponent-container border-l">
             <div class="row">
-              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-4></h5></div>
-              <div class="col-xl-9 no-padding-lr align-right">
+              <div class="col-lg-3 no-padding-lr"><h5 id=opponentName-4></h5></div>
+              <div class="col-lg-9 no-padding-lr align-right">
                 <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-4">Select</button>  
               </div>
             </div>
@@ -47,19 +47,19 @@
 
         <!-- Opponents 2 & 5 -->
         <div class="row border-b">
-          <div class="col-xl-6 opponent-container">
+          <div class="col-lg-6 opponent-container">
             <div class="row">
-              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-2></h5></div>
-              <div class="col-xl-9 no-padding-lr align-right">              
+              <div class="col-lg-3 no-padding-lr"><h5 id=opponentName-2></h5></div>
+              <div class="col-lg-9 no-padding-lr align-right">              
                 <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-2">Select</button>  
               </div>
             </div>
             <div class="card-container" id="opponentCards-2"></div>
           </div>      
-          <div class="col-xl-6 opponent-container border-l">
+          <div class="col-lg-6 opponent-container border-l">
             <div class="row">
-              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-5></h5></div>
-              <div class="col-xl-9 no-padding-lr align-right">              
+              <div class="col-lg-3 no-padding-lr"><h5 id=opponentName-5></h5></div>
+              <div class="col-lg-9 no-padding-lr align-right">              
                 <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-5">Select</button>  
               </div>
             </div>
@@ -69,19 +69,19 @@
 
         <!-- Opponents 1 & 6 -->
         <div class="row border-b"> 
-          <div class="col-xl-6 opponent-container">
+          <div class="col-lg-6 opponent-container">
             <div class="row">
-              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-1></h5></div>
-              <div class="col-xl-9 no-padding-lr align-right">              
+              <div class="col-lg-3 no-padding-lr"><h5 id=opponentName-1></h5></div>
+              <div class="col-lg-9 no-padding-lr align-right">              
                 <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-1">Select</button>  
               </div>
             </div>
             <div class="card-container" id="opponentCards-1"></div>
           </div>      
-          <div class="col-xl-6 opponent-container border-l">
+          <div class="col-lg-6 opponent-container border-l">
             <div class="row">
-              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-6></h5></div>
-              <div class="col-xl-9 no-padding-lr align-right">              
+              <div class="col-lg-3 no-padding-lr"><h5 id=opponentName-6></h5></div>
+              <div class="col-lg-9 no-padding-lr align-right">              
                 <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-6">Select</button>  
               </div>
             </div>
@@ -91,19 +91,19 @@
 
         <!-- Player -->
         <div class="row"> 
-          <div class="col-xl-12 player-container">
+          <div class="col-lg-12 player-container">
             <div class="row">
-              <div class="col-xl-3 no-padding-lr"><h5 id=playerName></h5></div>
-              <div class="col-xl-9 no-padding-lr align-right">
+              <div class="col-lg-3 no-padding-lr"><h5 id=playerName></h5></div>
+              <div class="col-lg-9 no-padding-lr align-right">
                 <button class="btn btn-sm btn-light btn-margin select-player" id="selectMe">Select</button>
                 <button id="hostOpenDialogButton" type="button" class="btn btn-sm btn-dark">Host Commands</button>                
               </div>
             </div>
             <div class="row">
-              <div class="col-xl-10 no-padding-lr">
+              <div class="col-lg-10 no-padding-lr">
                 <div class="card-container" id="playerCards"></div>
               </div>          
-              <div class="col-xl-2">
+              <div class="col-lg-2">
                 <!-- Bet Area-->                
                 <div id="betArea" class="align-right spacer">
                   <div id="betCheckDiv"><button class="btn btn-sm btn-light btn-margin" id="betCheck">Check</button></div>
@@ -119,12 +119,12 @@
       </div> <!-- Left Area Div-->
 
       <!-- Information Area -->
-      <div class="col-xl-3 section-container border-t border-r border-b border-l"> <!-- Right Area Div-->
+      <div class="col-lg-3 section-container border-t border-r border-b border-l"> <!-- Right Area Div-->
         
         <!-- Player Info -->
         <div class="info-container player-info-container border-b">
           <div class="row">
-            <div class="col-xl-12 no-padding-lr"><h5>Player Info:</h5></div>
+            <div class="col-lg-12 no-padding-lr"><h5>Player Info:</h5></div>
           </div>
           <div id="playerInfoArea"></div>
         </div> <!-- Player Info -->
@@ -132,7 +132,7 @@
         <!-- Hand Info -->
         <div class="info-container hand-info-container border-b">
           <div class="row">
-            <div class="col-xl-12 no-padding-lr">
+            <div class="col-lg-12 no-padding-lr">
               <h5>Hand Info: <span id="handName" class="hand-name"></span></h5>
             </div>
           </div>
@@ -143,10 +143,10 @@
         <!-- Commands -->
         <div class="info-container">
           <div class="row">
-            <div class="col-xl-6 no-padding-lr">
+            <div class="col-lg-6 no-padding-lr">
                 <h5>Dealer Commands:</h5>
             </div>
-            <div class="col-xl-6 align-right">
+            <div class="col-lg-6 align-right">
               <span id="deckStats" class="dealer-ind"></span>
           </div>
         </div>
@@ -154,15 +154,15 @@
           <!-- Dealing Commands-->
           <div id="dealerCommandArea">
             <div class="row row-padding">
-              <div class="col-xl-3">Mode:</div>
-              <div class="col-xl-9">
+              <div class="col-lg-3">Mode:</div>
+              <div class="col-lg-9">
                 <input type="radio" name="dealMode" id="faceDown" value="D" checked> - Face Down &nbsp;&nbsp;
                 <input type="radio" name="dealMode" id="faceUp" value="U"> - Face Up
               </div>
             </div>
             <div class="row row-padding">
-              <div class="col-xl-3">Deal:</div>
-              <div class="col-xl-9">
+              <div class="col-lg-3">Deal:</div>
+              <div class="col-lg-9">
                 <button class="btn btn-sm btn-light btn-margin" id="dealToAll">Deal to All</button><br/>
                 <button class="btn btn-sm btn-light btn-margin" id="dealToNext">Deal to Next</button>
                 <button class="btn btn-sm btn-light btn-margin" id="dealToSpecific">Deal to Specific</button><br/>
@@ -171,13 +171,14 @@
               </div>
             </div>
             <div class="row row-padding">
-              <div class="col-xl-3">Other:</div>
-              <div class="col-xl-9">
+              <div class="col-lg-3">Other:</div>
+              <div class="col-lg-9">
                 <button class="btn btn-sm btn-warning btn-margin" id="requestPayment">Request Payment</button><br/>
                 <button class="btn btn-sm btn-primary btn-margin" id="initiateBetting">Initiate Betting</button><br/>
                 <button class="btn btn-sm btn-danger btn-margin" id="endShowHands">Show All Hands</button>
                 <button class="btn btn-sm btn-danger btn-margin" id="endHand">End Hand</button><br/>
-                <button class="btn btn-sm btn-danger btn-margin" id="reDealHand">Re-Deal Hand</button> 
+                <button class="btn btn-sm btn-danger btn-margin" id="reDealHandAnte">Re-Deal With Ante</button> 
+                <button class="btn btn-sm btn-danger btn-margin" id="reDealHandNoAnte">Re-Deal No Ante</button> 
               </div>
             </div>
           </div>
@@ -185,8 +186,8 @@
           <!-- Initiate Betting Commands -->
           <div id="initBetCommandArea" class="dealer-command-none">
             <div class="row row-padding">
-              <div class="col-xl-3">Bet Initiate:</div>
-              <div class="col-xl-9">
+              <div class="col-lg-3">Bet Initiate:</div>
+              <div class="col-lg-9">
                 <button class="btn btn-sm btn-primary btn-margin bet-button" id="initiateBettingNext">Start with Next</button><br/>
                 <button class="btn btn-sm btn-primary btn-margin bet-button" id="initiateBettingSpecific">Start with Specific</button><br/>
                 <button class="btn btn-sm btn-danger btn-margin" id="initiateBettingCancel">Cancel</button><br/>
@@ -197,8 +198,8 @@
           <!-- Deck Disposition Commands -->
           <div id="deckDispositionArea" class="dealer-command-none">
             <div class="row row-padding">
-              <div class="col-xl-3">Disposition:</div>
-              <div class="col-xl-9">
+              <div class="col-lg-3">Disposition:</div>
+              <div class="col-lg-9">
                 <button class="btn btn-sm btn-light btn-margin" id="deckPass">Pass the Deck</button><br/>
                 <button class="btn btn-sm btn-light btn-margin" id="deckDealAgain">Deal Again</button><br/>
               </div>
